Login Page remodelled

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="black_shade1">#292D36</color>
     <color name="black_shade2">#272B33</color>
     <color name="black_shade3">#021853</color>
+    <color name="blue">#808ADF</color>
 </resources>
