--- a/app/src/main/res/layout/activity_features.xml
+++ b/app/src/main/res/layout/activity_features.xml
@@ -7,28 +7,38 @@
     tools:context=".FeatureActivity">
 
     <Button
-        android:id="@+id/CryptoFeatureActivity"
+        android:id="@+id/cryptoFeatureActivity"
         android:layout_width="110dp"
         android:layout_height="62dp"
+        android:layout_marginTop="108dp"
         android:text="@string/crypto_tracker"
+        app:layout_constraintEnd_toStartOf="@+id/GooglePayActivity"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/YahooFinanceFeatureActivity" />
+
+    <Button
+        android:id="@+id/YahooFinanceFeatureActivity"
+        android:layout_width="110dp"
+        android:layout_height="62dp"
+        android:text="@string/finance"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.093"
+        app:layout_constraintHorizontal_bias="0.328"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.085" />
+        app:layout_constraintVertical_bias="0.318" />
 
     <Button
         android:id="@+id/GooglePayActivity"
         android:layout_width="110dp"
         android:layout_height="62dp"
-        android:layout_marginStart="100dp"
         android:text="Google Pay"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.174"
-        app:layout_constraintStart_toEndOf="@+id/CryptoFeatureActivity"
+        app:layout_constraintHorizontal_bias="0.996"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.085" />
+        app:layout_constraintVertical_bias="0.089" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
