--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,36 +9,57 @@
     android:padding="15dp"
     tools:context=".loginActivity">
 
-    <TextView
-        android:text="@string/login"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_height="wrap_content">
+    <TextView
+        android:text="Godzilla Finance"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="30sp"
         android:layout_marginBottom="20dp"
+        android:textAppearance="?android:textAppearanceLarge"
         />
-
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10sp"/>
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/emailLogin"
-            android:hint="@string/email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/black"
+            android:hint="Email"/>
     </com.google.android.material.textfield.TextInputLayout>
 
 
 
     <com.google.android.material.textfield.TextInputLayout
+        app:passwordToggleEnabled="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passwordLogin"
-            android:hint="@string/password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/black"
+            android:inputType="textPassword"
+            android:hint="Password"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <ProgressBar
@@ -46,22 +67,40 @@
         android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"/>
-
-<Button
+        <CheckBox
+            android:id="@+id/checkBox2"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Remember Me" />
+    <Button
     android:id="@+id/buttonLogin"
     android:text="@string/login"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-/>
+    android:gravity="center"
+    android:layout_margin="10dp"
+    android:background="@color/blue"
+
+    android:textAppearance="?android:textAppearanceMedium"
+    android:textColor="@android:color/black"
+    android:textColorHint="@android:color/black"
+    />
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:id="@+id/forgot_password"
+            android:text="Forgot password?"
+            android:padding="5dp"
+      />
     <TextView
         android:id="@+id/SignUpNowLogin"
-        android:text="Click To Register "
-        android:gravity="center"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:padding="5sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Don't have an account? Sign up here."
+        android:padding="5dp"
         />
-
+    </LinearLayout>
 </LinearLayout>
