--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,24 +9,42 @@
     android:padding="15dp"
     tools:context=".registerActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_height="wrap_content">
     <TextView
         android:text="@string/register"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:fontFamily="@font/sarina"
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="30sp"
         android:layout_marginBottom="20dp"
         />
+<Space
+    android:layout_width="match_parent"
+    android:layout_height="10sp"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/emailRegister"
             android:hint="@string/email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/black"
+            />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -38,9 +56,19 @@
             android:id="@+id/passwordRegister"
             android:hint="@string/password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/black"
+            android:inputType="textPassword"/>
 
+    </com.google.android.material.textfield.TextInputLayout>
+        <CheckBox
+            android:id="@+id/checkBox2"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Remember Me" />
     <ProgressBar
         android:id="@+id/progressbarRegister"
         android:visibility="gone"
@@ -52,17 +80,25 @@
         android:text="@string/signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textColor="@android:color/black"
+        android:textColorHint="@android:color/black"
+        android:background="@color/blue"
         />
 
     <TextView
         android:id="@+id/LoginInNowRegister"
-        android:text="Click To Login "
         android:gravity="center"
         android:textSize="15sp"
         android:textStyle="bold"
         android:padding="5sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Don't have an account? Sign up here."
+
         />
+    </LinearLayout>
 
 </LinearLayout>
+
+
