--- a/app/src/main/res/layout/activity_features.xml
+++ b/app/src/main/res/layout/activity_features.xml
@@ -1,44 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FeatureActivity">
+    tools:context=".FeatureActivity"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start"
+    >
+    <include layout="@layout/appbar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </include>
+
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="wrap_content"
+        app:itemIconTint="@color/black"
+        app:itemTextAppearance="@style/TextAppearance.AppCompat.Small"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:id="@+id/naView"
+        app:itemTextColor="@color/black"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/nav_menu"
+        app:headerLayout="@layout/nav_header"
+        ></com.google.android.material.navigation.NavigationView>
 
     <Button
         android:id="@+id/cryptoFeatureActivity"
         android:layout_width="110dp"
         android:layout_height="62dp"
-        android:layout_marginTop="108dp"
         android:text="@string/crypto_tracker"
-        app:layout_constraintEnd_toStartOf="@+id/GooglePayActivity"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/YahooFinanceFeatureActivity" />
+        tools:layout_editor_absoluteX="208dp"
+        tools:layout_editor_absoluteY="525dp" />
 
-    <Button
-        android:id="@+id/YahooFinanceFeatureActivity"
-        android:layout_width="110dp"
-        android:layout_height="62dp"
-        android:text="@string/finance"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.328"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.318" />
-
-    <Button
-        android:id="@+id/GooglePayActivity"
-        android:layout_width="110dp"
-        android:layout_height="62dp"
-        android:text="Google Pay"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.996"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.089" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
