--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -15,43 +15,43 @@
         android:icon="@drawable/ic_income">
 
     </item>
-<!--    <item android:id="@+id/search_income"-->
-<!--        android:title="Search Income"-->
-<!--        android:icon="@drawable/search_income">-->
+    <item android:id="@+id/search_income"
+        android:title="Search Income"
+        android:icon="@drawable/search_income">
 
-<!--    </item>-->
-<!--    <item android:id="@+id/expense"-->
-<!--        android:title="Expense"-->
-<!--        android:icon="@drawable/ic_expense">-->
+    </item>
+    <item android:id="@+id/expense"
+        android:title="Expense"
+        android:icon="@drawable/ic_expense">
 
-<!--    </item>-->
-<!--    <item android:id="@+id/search_expense"-->
-<!--        android:title="Search Expense"-->
-<!--        android:icon="@drawable/search_expense">-->
+    </item>
+    <item android:id="@+id/search_expense"
+        android:title="Search Expense"
+        android:icon="@drawable/search_expense">
 
-<!--    </item>-->
-<!--    <item android:id="@+id/income_tax_emi"-->
-<!--        android:title="Income Tax And EMI"-->
-<!--        android:icon="@drawable/ic_inc">-->
+    </item>
+    <item android:id="@+id/income_tax_emi"
+        android:title="Income Tax And EMI"
+        android:icon="@drawable/ic_inc">
 
-<!--    </item>-->
-<!--    <item android:id="@+id/calculator"-->
-<!--        android:title="Calculator"-->
-<!--        android:icon="@drawable/ic__calculator">-->
+    </item>
+    <item android:id="@+id/calculator"
+        android:title="Calculator"
+        android:icon="@drawable/ic__calculator">
 
-<!--    </item>-->
-<!--    <item android:id="@+id/feedback"-->
-<!--        android:title="Rate us"-->
-<!--        android:icon="@drawable/ic_star_rate">-->
+    </item>
+    <item android:id="@+id/feedback"
+        android:title="Rate us"
+        android:icon="@drawable/ic_star_rate">
 
-<!--    </item>-->
-<!--    <item android:id="@+id/about"-->
-<!--        android:title="About"-->
-<!--        android:icon="@drawable/ic_about">-->
+    </item>
+    <item android:id="@+id/about"
+        android:title="About"
+        android:icon="@drawable/ic_about">
 
-<!--    </item>-->
-<!--    <item android:id="@+id/logout"-->
-<!--        android:title="Logout"-->
-<!--        android:icon="@drawable/ic_logout">-->
-<!--    </item>-->
+    </item>
+    <item android:id="@+id/logout"
+        android:title="Logout"
+        android:icon="@drawable/ic_logout">
+    </item>
 </menu>
