--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/profile"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view"
+    >
+
+    <group android:checkableBehavior="single">
+        <item android:id="@+id/profile"
         android:title="My Profile"
         android:icon="@drawable/ic_profile">
 
@@ -53,5 +58,7 @@
     <item android:id="@+id/logout"
         android:title="Logout"
         android:icon="@drawable/ic_logout">
+
     </item>
+</group>
 </menu>
