--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,57 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/drawer_layout"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
+        <include layout="@layout/appbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </include>
+        <com.google.android.material.navigation.NavigationView
+            android:layout_width="wrap_content"
+            app:itemIconTint="@color/black"
+            app:itemTextAppearance="@style/TextAppearance.AppCompat.Small"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:id="@+id/naView"
+            app:itemTextColor="@color/black"
+            android:fitsSystemWindows="true"
+            app:menu="@menu/nav_menu"
+            app:headerLayout="@layout/nav_header"
+            >
+        </com.google.android.material.navigation.NavigationView>
 
-    <TextView
-        android:id="@+id/WelcomeTextMain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="121dp"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toTopOf="@+id/ExploreMainActivity"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.047"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signOutButtonMainActivity"
-        app:layout_constraintVertical_bias="0.137" />
+</androidx.drawerlayout.widget.DrawerLayout>
 
-    <Button
-        android:id="@+id/signOutButtonMainActivity"
-        android:layout_width="127dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/logout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.003"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/ExploreMainActivity"
-        android:layout_width="127dp"
-        android:layout_height="wrap_content"
-        android:text="@string/explore"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/dashboard"
-        android:layout_width="127dp"
-        android:layout_height="wrap_content"
-        android:text="Dashboard"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.591"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.789" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
